# io-beep-boop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: analysis.yml  release.yml  tests.yml
PACKAGE_NAME/tests/: conftest.py
docs/source/: cli.rst  conf.py  index.rst  installation.rst  misc.rst  reference.rst  trivia.rst
io_beep_boop/: __init__.py
io_beep_boop/api/: __init__.py  client.py  models.py
io_beep_boop/cli/: __main__.py
io_beep_boop/tests/: test_something.py
